<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_baseline_cast_for_education_24"
            android:title="@string/education" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/nav_grammar"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/grammar" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorite" />
    </group>
</menu>