<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_education">

    <fragment
        android:id="@+id/nav_education"
        android:name="com.deadely.itgenglish.ui.education.EducationFragment"
        android:label="@string/menu_education"
        tools:layout="@layout/fragment_education" />

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="com.deadely.itgenglish.ui.dictionary.DictionaryFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_grammar"
        android:name="com.deadely.itgenglish.ui.grammar.GrammarFragment"
        android:label="@string/menu_grammar"
        tools:layout="@layout/fragment_grammar" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.deadely.itgenglish.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>