<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fillViewport="true"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:overScrollMode="never"
    android:padding="16dp"
    tools:context=".ui.login.LoginActivity"
    tools:ignore="SpUsage,ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rlFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_white_rounded"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="50dp">

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivEmail"
                    android:fontFamily="@font/rubik"
                    android:text="@string/email"
                    android:textSize="18dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlEmail"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/example_email"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:nextFocusForward="@id/etPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_security_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivPassword"
                    android:fontFamily="@font/rubik"
                    android:text="@string/password"
                    android:textSize="18dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlPassword"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/small_password"
                android:inputType="textPassword"
                android:maxLength="35"
                android:nextFocusForward="@id/etYear"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <RelativeLayout
                android:id="@+id/rlYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPassword"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ivYear"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivYear"
                    android:fontFamily="@font/rubik"
                    android:text="@string/years"
                    android:textSize="18dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlYear"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:digits="1234567890"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/_18"
                android:inputType="textNoSuggestions"
                android:maxLength="3"
                android:nextFocusForward="@id/etGender"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <RelativeLayout
                android:id="@+id/rlGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etYear"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ivGender"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_gender" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivGender"
                    android:fontFamily="@font/rubik"
                    android:text="@string/gender"
                    android:textSize="18dp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlGender"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/male"
                android:inputType="textNoSuggestions"
                android:maxLength="35"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlFields"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik"
                    android:paddingVertical="@dimen/activity_horizontal_margin"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/is_account_exist" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/RoundedButtonWithWhiteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:fontFamily="@font/rubik"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pvLoad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:progressDrawable="@drawable/progress_bar"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>