<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fillViewport="true"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:overScrollMode="never"
    android:padding="16dp"
    tools:context=".ui.reg.RegisterActivity"
    tools:ignore="SpUsage,ContentDescription,Autofill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_white_rounded"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="50dp">

            <RelativeLayout
                android:id="@+id/rlEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivEmail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivEmail"
                    android:fontFamily="@font/rubik"
                    android:text="@string/email"
                    android:textSize="16dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlEmail"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/example_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_security_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@id/ivPassword"
                    android:fontFamily="@font/rubik"
                    android:text="@string/password"
                    android:textSize="16dp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlPassword"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:ems="10"
                android:fontFamily="@font/rubik"
                android:hint="@string/small_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/rubik"
            android:paddingVertical="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>